tests/ui/parser/suggest_misplaced_generics/fn-complex-generics.stderr
error: expected identifier, found `<`
  --> $DIR/fn-complex-generics.rs:5:3
   |
LL | fn<'a, B: 'a + std::ops::Add<Output = u32>> f(_x: B) { }
   |   ^ expected identifier
   |
help: place the generic parameter name after the fn name
   |
LL - fn<'a, B: 'a + std::ops::Add<Output = u32>> f(_x: B) { }
LL + fn f<'a, B: 'a + std::ops::Add<Output = u32>>(_x: B) { }
   |

error: aborting due to 1 previous error

